Bug #37429 Ndb libmysqld does not wait for cluster binlog thread to terminate
Submitted: 16 Jun 2008 16:22 Modified: 2 Jul 2008 18:42
Reporter: Tomas Ulin
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version: OS:Any
Assigned to: Tomas Ulin Target Version:

[16 Jun 2008 16:22] Tomas Ulin
Description:
.

How to repeat:
.
[2 Jul 2008 18:42] Jon Stephens
Documented in the NDB 6.3.16 changelog as follows:

        libmysqld did not wait for the cluster binlog thread to
        terminate before exiting.

(Changelog entry tagged as being specific to Cluster.)