Bug #37429  	Ndb libmysqld does not wait for cluster binlog thread to terminate